refactor golek